# continual

./: .gitignore  LICENSE  README.md  data_processing.py  environment.yml  main.py  models.py  plotting.py  pyproject.toml  pytorch_bp.py  requirements-gpu.txt  requirements.txt  test_suite.py  tests.py  time-series.py  training.py
.github/workflows/: os.yml  python-package.yml  python-versions.yml  test_multiple_environments.yml
config/: README.md  config.py
data/: README.md
results/: README.md
results/hyperparams/: best_config_random_age.json
results/metrics/: results_random_age.json
src/config/: config.py
src/utils/: cl_strategies.py  data_processing.py  metrics.py  models.py  plotting.py  training.py
tests/: test_data.py  test_integration.py  test_unit.py
utils/: cl_strategies.py  config.py  data_processing.py  metrics.py  models.py  plotting.py  training.py
